[package]
name = "acty"
version = "0.1.0"
edition = "2024"
authors = ["Numeration<boxed87@outlook.com>"]
description = "A lightweight, async actor framework built on Tokio."
license-file = "LICENSE"
repository = "https://github.com/Numeration/acty"
readme = "README.md"
documentation = "https://docs.rs/acty"
keywords = ["actor", "tokio", "async", "framework", "concurrency"]
categories = ["asynchronous", "concurrency", "network-programming"]

[dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "macros", "signal"] }
tokio-stream = "0.1.17"
trait-variant = "0.1.2"
